<resources>
    <string name="application_name" translatable="false">Continuum</string>
    <string name="login_activity_label">Login</string>
    <string name="search_activity_label" translatable="false"> </string>
    <string name="comment_activity_label">Send Comment</string>
    <string name="comment_activity_label_is_replying">Reply</string>
    <string name="post_text_activity_label">Text Post</string>
    <string name="subreddit_selection_activity_label">Select a Subreddit</string>
    <string name="post_link_activity_label">Link Post</string>
    <string name="post_image_activity_label">Image Post</string>
    <string name="post_video_activity_label">Video Post</string>
    <string name="rules_activity_label">Rules</string>
    <string name="search_subreddits_activity_label">Subreddits</string>
    <string name="edit_post_activity_label">Edit Post</string>
    <string name="edit_comment_activity_label">Edit Comment</string>
    <string name="view_message_activity_label">Inbox</string>
    <string name="settings_activity_label">Settings</string>
    <string name="account_saved_thing_activity_label">Saved</string>
    <string name="create_multi_reddit_activity_label">Create MultiReddit</string>
    <string name="subreddit_multiselection_activity_label">Select Subreddits</string>
    <string name="user_multiselection_activity_label">Select Users</string>
    <string name="custom_theme_listing_activity_label">Custom Themes</string>
    <string name="customize_theme_activity_label">Customize Theme</string>
    <string name="customize_theme_activity_create_theme_label">Create Theme</string>
    <string name="theme_preview_activity_label">Theme Preview</string>
    <string name="edit_multi_reddit_activity_label">Edit MultiReddit</string>
    <string name="selected_subeddits_activity_label">Selected Subreddits</string>
    <string name="report_activity_label">Report</string>
    <string name="view_imgur_media_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_imgur_media_activity_video_label">Video %1$d/%2$d</string>
    <string name="send_private_message_activity_label">Send PM</string>
    <string name="view_reddit_gallery_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_gif_label">Gif %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_video_label">Video %1$d/%2$d</string>
    <string name="submit_crosspost_activity_label">Crosspost</string>
    <string name="give_award_activity_label">Give Award</string>
    <string name="subreddit_filter_popular_and_all_activity_label">r/all and r/popular</string>
    <string name="customize_post_filter_activity_label">Customize Post Filter</string>
    <string name="filtered_posts_activity_subtitle">Filtered Posts</string>
    <string name="post_filter_preference_activity_label">Post Filter</string>
    <string name="search_users_result_activity_label">Users</string>
    <string name="multireddit_selection_activity_label">Select a MultiReddit</string>
    <string name="post_gallery_activity_label">Gallery Post</string>
    <string name="wiki_activity_label">Wiki</string>
    <string name="edit_profile_activity_label">Edit Profile</string>
    <string name="post_poll_activity_label">Poll Post</string>
    <string name="history_activity_read_posts_label">Read Posts</string>
    <string name="history_activity_subtitle">Stored on this device</string>
    <string name="subscription_activity_label">Subscription</string>
    <string name="comment_filter_preference_activity_label">Comment Filter</string>
    <string name="customize_comment_filter_activity_label">Customize Comment Filter</string>
    <string name="copy_multireddit_activity_label">Copy MultiReddit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_download">Download</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_comment">Send comment</string>
    <string name="action_save_post">Save post</string>
    <string name="action_unsave_post">Unsave post</string>
    <string name="action_view_crosspost_parent">View crosspost parent</string>
    <string name="action_search">Search</string>
    <string name="action_match_prefix_only">Match prefix only</string>
    <string name="action_start_lazy_mode">Start Lazy Mode</string>
    <string name="action_stop_lazy_mode">Stop Lazy Mode</string>
    <string name="action_shadowbox_mode">Shadowbox Mode</string>
    <string name="action_send">Send</string>
    <string name="action_sort">Sort</string>
    <string name="action_hide_post">Hide Post</string>
    <string name="action_unhide_post">Unhide Post</string>
    <string name="action_edit_post">Edit Post</string>
    <string name="action_delete_post">Delete Post</string>
    <string name="action_mark_nsfw">Mark NSFW</string>
    <string name="action_unmark_nsfw">Unmark NSFW</string>
    <string name="action_mark_spoiler">Mark Spoiler</string>
    <string name="action_unmark_spoiler">Unmark Spoiler</string>
    <string name="action_edit_flair">Edit Flair</string>
    <string name="action_change_post_layout">Change Post Layout</string>
    <string name="action_save">Save</string>
    <string name="action_edit_multi_reddit">Edit MultiReddit</string>
    <string name="action_delete_multi_reddit">Delete MultiReddit</string>
    <string name="action_copy_multi_reddit">Copy MultiReddit</string>
    <string name="action_list_subreddits">MultiReddit\'s Subreddits</string>
    <string name="action_share">Share</string>
    <string name="action_preview">Preview</string>
    <string name="action_report">Report</string>
    <string name="action_crosspost">Crosspost</string>
    <string name="action_set_wallpaper">Set as Wallpaper</string>
    <string name="action_send_private_message">Send Private Message</string>
    <string name="action_block_user">Block User</string>
    <string name="action_tag_user">Tag User</string>
    <string name="action_edit_user_tag">Edit User Tag</string>
    <string name="action_select_user_flair">Select User Flair</string>
    <string name="action_give_award">Give Award</string>
    <string name="action_save_to_database">Save to Database</string>
    <string name="action_read_all_messages">Read All Messages</string>
    <string name="action_add_to_multireddit">Add to MultiReddit</string>
    <string name="action_share_link">Share Link</string>
    <string name="action_copy_link">Copy Link</string>
    <string name="action_open_external_browser">Open in browser</string>
    <string name="action_add_to_post_filter">Add to Post Filter</string>
    <string name="action_reset_fab_position">Reset FAB position</string>
    <string name="action_next_parent_comment">Next Top-Level Comment</string>
    <string name="action_previous_parent_comment">Previous Top-Level Comment</string>
    <string name="bottom_sheet_post_text">Text</string>
    <string name="bottom_sheet_post_link">Link</string>
    <string name="bottom_sheet_post_image">Image</string>
    <string name="bottom_sheet_post_video">Video</string>
    <string name="post_type_gif">Gif</string>
    <string name="post_type_gallery">Gallery</string>
    <string name="other_discussions">Other Discussions</string>
    <string name="settings_delete_all_subreddits_data_in_database_title">Delete All Subreddits</string>
    <string name="settings_delete_all_users_data_in_database_title">Delete All Users</string>
    <string name="settings_delete_all_sort_type_data_in_database_title">Delete All Sort Types</string>
    <string name="settings_delete_all_post_layout_data_in_database_title">Delete All Post Layouts</string>
    <string name="settings_delete_front_page_scrolled_positions_in_database_title">Delete All Front Page Scrolled Positions</string>
    <string name="settings_delete_read_posts_in_database_title">Delete All Read Posts</string>
    <string name="settings_swipe_actions_haptic_feedback_title">Haptic Feedback</string>
    <string name="settings_disable_swiping_between_tabs_title">Disable Swiping Between Tabs</string>
    <string name="settings_swipe_actions_threshold">Threshold</string>
    <string name="settings_swipe_actions_threshold_summary">The threshold is how far a swipe needs to go to register, as a percentage of the row\'s width. Posts have four slots, and comments have three. The spacing doesn\'t change depending on the number of configured actions.\n\n%1$s</string>
    <string name="settings_bottom_app_bar_option_1">Option 1</string>
    <string name="settings_bottom_app_bar_option_2">Option 2</string>
    <string name="settings_bottom_app_bar_option_3">Option 3</string>
    <string name="settings_bottom_app_bar_option_4">Option 4</string>
    <string name="settings_copy_settings_from_account_title">Copy Settings from Another Account</string>
    <string name="settings_copy_settings_from_account_summary">Give this account the settings another one has</string>
    <string name="settings_reset_account_settings_title">Reset All Account Settings</string>
    <string name="settings_reset_account_settings_summary">Put this account back on the default settings</string>
    <string name="settings_delete_account_subreddits_summary">Forget this account\'s subscribed subreddits and favourites</string>
    <string name="settings_delete_account_users_summary">Forget the users this account follows or has saved</string>
    <string name="settings_delete_account_sort_types_summary">Forget the sort order each feed remembers</string>
    <string name="settings_delete_account_post_layouts_summary">Forget the layout each feed remembers</string>
    <string name="settings_delete_account_front_page_scrolled_position_summary">Forget where Home had been read up to</string>
    <string name="settings_swipe_actions_info_summary">Not applicable to post feed with more than 1 column or post detail. Leave the deeper actions empty for a one-step swipe.</string>
    <string name="settings_post_swipe_actions_title">Post Swipe Actions</string>
    <string name="settings_comment_swipe_actions_title">Comment Swipe Actions</string>
    <string name="settings_enable_post_swipe_actions_title">Enable Post Swipe Actions</string>
    <string name="settings_enable_comment_swipe_actions_title">Enable Comment Swipe Actions</string>
    <string name="settings_enable_swipe_actions_turns_off_swipe_between_posts_summary">Turns off Swipe Between Posts, which needs the same horizontal swipe.</string>
    <string name="settings_swipe_actions_left_side">Left Side</string>
    <string name="settings_swipe_actions_right_side">Right Side</string>
    <string name="settings_swipe_actions_first_title">First Action</string>
    <string name="settings_swipe_actions_second_title">Second Action</string>
    <string name="settings_swipe_actions_third_title">Third Action</string>
    <string name="settings_swipe_actions_fourth_title">Fourth Action</string>
    <string name="settings_comment_swipe_actions_info_summary">Comments have their own actions, and three levels where posts have four. Threshold and haptic feedback are shared with post swipe actions. Leave the deeper actions empty for a one-step swipe.</string>
    <string name="settings_enable_fold_support_title">Enable folding phone support</string>
    <string name="settings_miscellaneous_dangerous_group_title">Dangerous</string>
    <string name="settings_post_feed_max_resolution_warning_title">Increase the value to show previews in higher resolution, but the app may crash unexpectedly.</string>
    <string name="settings_post_feed_max_resolution_title">Post Feed Preview Max Resolution (Width * Height)</string>
    <string name="post_filter_section_post_types">Post types</string>
    <string name="post_filter_post_types_summary">Only the selected types are shown.</string>
    <string name="action_bypass_saved_cache">Bypass cache</string>
</resources>