<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontPreference
        app:icon="@drawable/ic_info_preference_day_night_24dp"
        app:summary="@string/settings_swipe_actions_info_summary"
        app:enabled="false" />

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontPreference
        app:fragment="ml.docilealligator.infinityforreddit.settings.PostSwipeActionPreferenceFragment"
        app:title="@string/settings_post_swipe_actions_title" />

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontPreference
        app:fragment="ml.docilealligator.infinityforreddit.settings.CommentSwipeActionPreferenceFragment"
        app:title="@string/settings_comment_swipe_actions_title" />

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontListPreference
        app:defaultValue="0.3"
        app:entries="@array/settings_swipe_actions_threshold"
        app:entryValues="@array/settings_swipe_actions_threshold_values"
        app:key="swipe_action_threshold"
        app:summary="@string/settings_swipe_actions_threshold_summary"
        app:title="@string/settings_swipe_actions_threshold" />

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontSwitchPreference
        app:defaultValue="true"
        app:key="vibrate_when_action_triggered"
        app:title="@string/settings_swipe_actions_haptic_feedback_title" />

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="disable_swiping_between_tabs"
        app:title="@string/settings_disable_swiping_between_tabs_title" />

</PreferenceScreen>
