<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reset_fab_position_view_post_detail_activity"
        android:orderInCategory="100"
        android:title="@string/action_reset_fab_position"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_next_parent_comment_view_post_detail_activity"
        android:orderInCategory="101"
        android:title="@string/action_next_parent_comment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_previous_parent_comment_view_post_detail_activity"
        android:orderInCategory="102"
        android:title="@string/action_previous_parent_comment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_other_discussions_view_post_detail_activity"
        android:orderInCategory="103"
        android:title="@string/other_discussions"
        app:showAsAction="never" />
</menu>