<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="enable_fold_support"
        app:title="@string/settings_enable_fold_support_title" />

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontPreferenceCategory
        app:title="@string/settings_miscellaneous_dangerous_group_title" />

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontPreference
        app:icon="@drawable/ic_info_preference_day_night_24dp"
        app:summary="@string/settings_post_feed_max_resolution_warning_title"
        app:enabled="false" />

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontEditTextPreference
        app:defaultValue="5000000"
        app:key="post_feed_max_resolution"
        app:title="@string/settings_post_feed_max_resolution_title"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
